new routes for upload and download
